# KalshiBot

./: .env.example  .gitignore  CLAUDE.md  KALSHI_DEV_CHEATSHEET.md  Memory.md  README.md  STATUS.md  audit_bot.py  com.nathaniel.kalshibot.plist  dashboard_api.py  data_scraper.py  debug_kalshi.py  download_gemma4.py  error_cache.py  filter_engine.py  force_trade.py  ipad_dashboard.py  kalshi-manager.sh  kalshi_client_wrapper.py  main.py  pyproject.toml  risk_manager.py  sentiment_analyzer.py  settings.py  start_daemon.sh  start_fullstack.sh  test_api_auth.py  test_arbitrage.py  test_bot.py  test_debate.py  test_error_cache.py  test_paper_api.py  test_strategies.py  test_ws.py  test_ws2.py  test_ws3.py  test_ws_raw.py  trading_agent.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
logs/: .dd413f74ef7870fc3562d549e676b62d3eedac8a-audit.json
src/agents/: debate_engine.py
src/strategies/: arbitrage_scanner.py  copy_trader.py  market_maker.py  momentum_rider.py  timesfm_forecaster.py  weather_trader.py
src/utils/: endpoint_health.py
