[tool.poetry]
name = "kalshi-trading-bot"
version = "0.1.0"
description = "Agentic AI Kalshi Trading Bot"
authors = ["Nathaniel"]

[tool.poetry.dependencies]
python = ">=3.12"
pydantic-settings = "^2.0.0"
kalshi-python-async = "^1.1.2"
langgraph = "^0.0.15"
aiohttp = "^3.9.1"
langchain-community = "^0.0.10"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
